Shang New Live/src/objects/Tasklist_Items__c.object
<CustomObject>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Days__c</fullName>
        <label>Requested Completion Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasklist_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasklist Master</label>
        <referenceTo>Tasklist_Master__c</referenceTo>
        <relationshipLabel>Tasklist Items</relationshipLabel>
        <relationshipName>Tasklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tasklist Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Tasklist Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasklist Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>